# fp_lab2

./: .hlint.yaml  README.md  fourmolu.yaml  fp_lab2.cabal
.github/workflows/: haskell-ci.yml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.12.2/: fp-lab2-0.1.0.0-inplace.conf  package.cache
src/: Structure.hs
src/Structure/: Internal.hs
test/: Main.hs
