cabal-version:      2.4
name:               fp-lab2
version:            0.1.0.0
synopsis:           Prefix Tree Dictionary Implementation
description:        A functional programming lab implementing a prefix tree (trie) dictionary with monoid properties
license:            BSD-3-Clause
author:             Student
maintainer:         student@example.com
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Structure
    build-depends:    base >=4.17 && <5
    hs-source-dirs:   src
    default-language: Haskell2010

executable fp-lab2
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.17 && <5,
                      fp-lab2
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite fp-lab2-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base >=4.17 && <5,
                      fp-lab2,
                      HUnit,
                      QuickCheck